syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "internal/data/pb";

// NB detection point = sezione

  
//  I dati storicizzati vengono conservati con riferimento agli ultimi 10 anni.
// ci sono due intervalli di aggregazione: ogni ora e ogni giorno

message HistoryHourTrafficDataByDetectionPoint {
    google.protobuf.Timestamp created_at = 1;
    google.protobuf.Timestamp modified_at = 2;
    string data_source_name = 3;
    string detection_point_id = 4;
    string lane_id = 5; // definisce univocamente detection_point_id

    // campi relativi all'interallo di aggregazione di 60 min -> dipende dal db
    google.protobuf.Timestamp detection_timestamp = 6;
    uint32 detection_interval = 7;

    // flusso - a partire dai conteggi
    float traffic_flow_vehicle_class_1 = 8;
    float traffic_flow_vehicle_class_2 = 9;
    float traffic_flow_vehicle_class_3 = 10;
    float traffic_flow_vehicle_class_4 = 11;
    float traffic_flow_vehicle_class_5 = 12;
    float traffic_flow_vehicle_class_6 = 13;
    float traffic_flow_vehicle_class_7 = 14;
    float traffic_flow_vehicle_class_8 = 15;

    float traffic_flow_vehicle_class_equivalent = 16;

    // velocit√† di transito

    // - media
    float average_speed_vehicle_class_1 = 17;
    float average_speed_vehicle_class_2 = 18;
    float average_speed_vehicle_class_3 = 19;
    float average_speed_vehicle_class_4 = 20;
    float average_speed_vehicle_class_5 = 21;
    float average_speed_vehicle_class_6 = 22;
    float average_speed_vehicle_class_7 = 23;
    float average_speed_vehicle_class_8 = 24;

    float average_speed_vehicle_class_all = 25;

    // lunghezza
    float average_vehicle_length = 26;

    // headway fra veicoli
    float average_headway = 27;

    // time-to-collision
    float average_time_to_collision = 28;
}